samples/_failures_safe/1761606202_be2996_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3478f54b.c: In function ‘main’:
./samples/SAFE/__tmp_3478f54b.c:176:1: error: expected declaration or statement at end of input
  176 | int main() {
      | ^~~
